fixed top badge alignment on student report

--- a/5051/Content/Site.css
+++ b/5051/Content/Site.css
@@ -583,6 +583,3 @@ h1, h2, h3, h4, h5, h6
     font-size: 20px;
 }
 
-.badge-medium-top {
-    margin-bottom: 30px;
-}
